--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,11 @@
 <h1>{{ title }}</h1>
 
-<div *ngIf="selectedPizza">
-    <div>Id: {{ selectedPizza?.id }}</div>
-    <div>Name: {{ selectedPizza?.name }}</div>
-    <div>Price: {{ selectedPizza?.price }}</div>
-    <img [src]="selectedPizza.image">
-    <input [(ngModel)]="selectedPizza.name">
-</div>
+<app-pizza [pizza]="selectedPizza"></app-pizza>
 
 <ul>
     <li *ngFor="let pizza of pizzas; index as i"
         (click)="onSelect(pizza)"
+        [class.selected]="pizza === selectedPizza"
     >
         {{ i }} : {{ pizza.name }}
     </li>
