--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 
 <app-pizza [pizza]="selectedPizza"></app-pizza>
 
+<app-author [user]="user"></app-author>
+
 <ul>
     <li *ngFor="let pizza of pizzas; index as i"
         (click)="onSelect(pizza)"
