Fix ingredient list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <app-pizza [pizza]="selectedPizza"></app-pizza>
 
 <app-author [user]="user"></app-author>
+<app-ingredient-list [ingredients]="ingredients"></app-ingredient-list>
 
 <ul>
     <li *ngFor="let pizza of pizzas; index as i"
