--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,22 @@
-<h1>{{ title }}</h1>
+<div class="container">
+    <!-- Affiche une navbar Bootstrap -->
+    <app-menu></app-menu>
 
-<app-pizza [pizza]="selectedPizza"></app-pizza>
+    <h1>{{ title }}</h1>
 
-<app-author [user]="user"></app-author>
-<app-ingredient-list [ingredients]="ingredients"></app-ingredient-list>
-
-<ul>
-    <li *ngFor="let pizza of pizzas; index as i"
-        (click)="onSelect(pizza)"
-        [class.selected]="pizza === selectedPizza"
-    >
-        {{ i }} : {{ pizza.name }}
-    </li>
-</ul>
-
-{{ pizzas | json }}
+    <app-pizza [pizza]="selectedPizza"></app-pizza>
+    
+    <app-author [user]="user"></app-author>
+    <app-ingredient-list [ingredients]="ingredients"></app-ingredient-list>
+    
+    <ul>
+        <li *ngFor="let pizza of pizzas; index as i"
+            (click)="onSelect(pizza)"
+            [class.selected]="pizza === selectedPizza"
+        >
+            {{ i }} : {{ pizza.name }}
+        </li>
+    </ul>
+    
+    {{ pizzas | json }}
+</div>
