--- a/src/app/ingredient-list/ingredient-list.component.html
+++ b/src/app/ingredient-list/ingredient-list.component.html
@@ -1,5 +1,5 @@
-<div>
-    <div *ngFor="let ingredient of ingredients">
+<div class="row">
+    <div class="col-12 col-lg-4" *ngFor="let ingredient of ingredients">
         <h3>{{ ingredient.name }}</h3>
         <img [src]="ingredient.image" [alt]="ingredient.name">
         <p>{{ ingredient.weight }}</p>
