--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,14 +9,26 @@
         Chaque pizza sera affichée dans une card Bootstrap
         On retrouvera dans cette card, une image de la pizza, son nom, son prix et un bouton pour la sélectionner
     -->
-    <ul>
-        <li *ngFor="let pizza of pizzas; index as i"
-            (click)="onSelect(pizza)"
-            [class.selected]="pizza === selectedPizza"
+    <div class="row my-5">
+        <div class="col-3"
+             *ngFor="let pizza of pizzas; index as i"
+             [class.selected]="pizza === selectedPizza"
         >
-            {{ i }} : {{ pizza.name }}
-        </li>
-    </ul>
+            <div class="card">
+                <img class="card-img-top" [src]="'assets/pizzas/' + pizza.image" [alt]="pizza.name">
+                <div class="card-body">
+                    <h2 class="card-title">{{ pizza.name }}</h2>
+                    <p class="card-text">{{ pizza.price }}</p>
+                    <button (click)="onSelect(pizza)"
+                        class="btn btn-primary"
+                        [disabled]="pizza === selectedPizza"
+                    >
+                        Sélectionner
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <app-author [user]="user"></app-author>
     <app-ingredient-list [ingredients]="ingredients"></app-ingredient-list>
