--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
 <app-menu [title]="title"></app-menu>
 
 <div class="container">
-    <app-pizza [pizza]="selectedPizza"></app-pizza>
+    <app-pizza [pizza]="selectedPizza" (unselected)="unSelect($event)"></app-pizza>
     
-    <!-- 
+    <!--
         En utilisant la grille de Bootstrap, on veut afficher 4 pizzas par ligne
         Chaque pizza sera affichée dans une card Bootstrap
         On retrouvera dans cette card, une image de la pizza, son nom, son prix et un bouton pour la sélectionner
