--- a/src/app/ingredient-list/ingredient-list.component.html
+++ b/src/app/ingredient-list/ingredient-list.component.html
@@ -1,8 +1,20 @@
+<h2>Vos ingrédients</h2>
 <div class="row">
     <div class="col-12 col-lg-4" *ngFor="let ingredient of ingredients">
-        <h3>{{ ingredient.name }}</h3>
-        <img [src]="ingredient.image" [alt]="ingredient.name">
-        <p>{{ ingredient.weight }}</p>
-        <p>{{ ingredient.price }}</p>
+        <div class="media"
+             (click)="select(ingredient)"
+        >
+            <img class="img-fluid"
+                 width="50"
+                 [src]="'assets/ingredients/' + ingredient.image"
+                 [alt]="ingredient.name">
+            <div class="media-body">
+                <h5 class="mt-0">{{ ingredient.name }}</h5>
+                <p>
+                    Poids: {{ ingredient.weight }} <br />
+                    Prix: {{ ingredient.price }}
+                </p>
+            </div>
+        </div>
     </div>
 </div>
