--- a/src/app/pizza/pizza.component.html
+++ b/src/app/pizza/pizza.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="selectedPizza">
-    <div class="card text-center mt-5">
+    <div class="card text-center">
         <div class="card-body">
             <h2 class="card-title">Name: {{ selectedPizza?.name }}</h2>
             <div>Id: {{ selectedPizza?.id }}</div>
             <div>Price: {{ selectedPizza?.price }}</div>
-            <img width="150" [src]="'assets/pizzas/' + selectedPizza.image">
+            <img class="img-fluid" width="150" [src]="'assets/pizzas/' + selectedPizza.image">
             <input [(ngModel)]="selectedPizza.name" class="form-control">
             <button class="btn btn-danger" (click)="delete()">Supprimer</button>
         </div>
