--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="#">{{ title }}</a>
+        <a class="navbar-brand" routerLink="/">{{ title }}</a>
         <button class="navbar-toggler" type="button" (click)="toggleCollapseNavbar()" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -8,17 +8,15 @@
             [class.show]="isCollapsed" [ngClass]="{ show: isCollapsed }"
             id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link"
+                       routerLink="/"
+                       routerLinkActive="active"
+                       [routerLinkActiveOptions]="{ exact: true }"
+                    >Accueil <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" routerLink="/pizzas" routerLinkActive="active">Pizzas</a>
                 </li>
             </ul>
         </div>
