--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,9 @@
 <app-menu [title]="title"></app-menu>
 
 <div class="container">
+    <div class="text-center mt-5" *ngIf="loading">
+        <div class="spinner-border"></div>
+    </div>
+
     <router-outlet></router-outlet>
 </div>
