--- a/src/app/pizza-list/pizza-list.component.html
+++ b/src/app/pizza-list/pizza-list.component.html
@@ -67,6 +67,10 @@
     </div>
 </div>
 
+<div test="toto">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci non perspiciatis neque tenetur quaerat, quidem aperiam sequi numquam sit, ipsa, nobis earum quae eos repellat voluptas! Obcaecati et harum neque!
+</div>
+
 <app-author [user]="user"></app-author>
 
 <router-outlet></router-outlet>
