--- a/src/app/pizza-list/pizza-list.component.html
+++ b/src/app/pizza-list/pizza-list.component.html
@@ -71,6 +71,23 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci non perspiciatis neque tenetur quaerat, quidem aperiam sequi numquam sit, ipsa, nobis earum quae eos repellat voluptas! Obcaecati et harum neque!
 </div>
 
+<div bg="blue">
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam incidunt facilis accusamus quos eos delectus pariatur tempore, iste voluptas ut magni, natus aliquid ea similique ab deleniti cumque consequatur dolorem?
+</div>
+
+<input type="text" clearOnDbClick>
+
+<div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" dropdownToggle>
+        Dropdown button
+    </button>
+    <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+    </div>
+</div>
+
 <app-author [user]="user"></app-author>
 
 <router-outlet></router-outlet>
