--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -25,6 +25,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/pizzas/create" routerLinkActive="active">Créer une pizza</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/ingredients/create" routerLinkActive="active">Créer un ingrédient</a>
+                </li>
             </ul>
         </div>
     </div>
