--- a/src/app/ingredient-form/ingredient-form.component.html
+++ b/src/app/ingredient-form/ingredient-form.component.html
@@ -1,12 +1,26 @@
 <form (ngSubmit)="save()" [formGroup]="ingredientForm">
     <div class="form-group">
         <label for="name">Nom</label>
-        <input type="text" name="name" formControlName="name" class="form-control">
+        <input type="text" name="name" formControlName="name" class="form-control"
+            [class.is-invalid]="ingredientForm.get('name').dirty && ingredientForm.get('name').hasError('required')"
+        >
+        <div class="invalid-feedback"
+             *ngIf="ingredientForm.get('name').dirty && ingredientForm.get('name').hasError('required')"
+        >
+            Veuillez saisir le nom
+        </div>
     </div>
 
     <div class="form-group">
         <label for="price">Price</label>
-        <input type="text" name="price" formControlName="price" class="form-control">
+        <input type="text" name="price" formControlName="price" class="form-control"
+            [class.is-invalid]="ingredientForm.get('price').dirty && ingredientForm.get('price').hasError('required')"
+        >
+        <div class="invalid-feedback"
+             *ngIf="ingredientForm.get('price').dirty && ingredientForm.get('price').hasError('required')"
+        >
+            Veuillez saisir le prix
+        </div>
     </div>
 
     <button class="btn btn-primary" [disabled]="ingredientForm.invalid">Ajouter l'ingrédient</button>
