--- a/src/app/ingredient-list/ingredient-list.component.html
+++ b/src/app/ingredient-list/ingredient-list.component.html
@@ -14,6 +14,10 @@
                     Poids: {{ ingredient.weight }} <br />
                     Prix: {{ ingredient.price }}
                 </p>
+                <button class="btn btn-danger"
+                        (click)="$event.stopPropagation(); delete(ingredient)">
+                    Supprimer
+                </button>
             </div>
         </div>
     </div>
