Add register page

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/ingredients/create" routerLinkActive="active">Créer un ingrédient</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/register" routerLinkActive="active">Inscription</a>
+                </li>
             </ul>
         </div>
     </div>
