--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Affiche une navbar Bootstrap -->
-<app-menu [title]="title"></app-menu>
+<app-menu [title]="title" [user]="user"></app-menu>
 
 <div class="container">
     <div class="text-center mt-5" *ngIf="loading">
