--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -20,5 +20,9 @@
         </div>
     </div>
 
+    <div *ngIf="errorMessage" class="text-danger">
+        {{ errorMessage }}
+    </div>
+
     <button class="btn btn-primary" [disabled]="!userForm.valid">S'inscrire</button>
 </form>
