--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -34,6 +34,12 @@
                 <li class="nav-item" *ngIf="!user">
                     <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
                 </li>
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link" routerLink="/contact">Contact</a>
+                </li>
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link" routerLink="/settings">Settings</a>
+                </li>
                 <li class="nav-item" *ngIf="user">
                     <span class="nav-link" (click)="logout()">{{ user }}</span>
                 </li>
